# qt_vision_cmake

./: CMakeLists.txt  CMakeLists.txt.user.228e4e4  CameraTile.qml  ControlButton.qml  ControlToolBar.qml  FrameChangeGroup.qml  README.md  main.cpp  main.qml  pixmapimage.h  qml.qrc
